--- a/src/Tools/StubGen/App.config
+++ b/src/Tools/StubGen/App.config
@@ -1,28 +1,19 @@
-<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
-	<!-- Leave this alone. Sets up configsectionhandler section -->
-	<configSections>
-		<section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler,log4net" />
-	</configSections>
+    <configSections>
+        <section name="nlog" type="NLog.Config.ConfigSectionHandler, NLog" />
+    </configSections>
 
-	<appSettings>
-	</appSettings>
-	
-	<!-- This section contains the log4net configuration settings -->
-	<log4net>
- 		<appender name="ConsoleAppender" type="log4net.Appender.ConsoleAppender" >
-			<layout type="log4net.Layout.PatternLayout">
-				<param name="ConversionPattern" value="[%c{2}:%m  - [%x] &lt;%X{auth}&gt;]%n" />
-			</layout>
-		</appender>
+    <appSettings>
+    </appSettings>
 
-		<!-- Setup the root category, add the appenders and set the default priority -->
-		<root>
-			<priority value="ERROR" />
-			<appender-ref ref="ConsoleAppender" />
-		</root>
+    <nlog>
+        <appenders>
+            <appender name="console" type="Console" />
+        </appenders>
 
-		<logger name="Sooda"><level value="INFO" /></logger>
-	</log4net>
-
+        <rules>
+            <logger name="*" appendTo="console" />
+        </rules>
+    </nlog>
 </configuration>
