--- a/tests/TestCases/App.config
+++ b/tests/TestCases/App.config
@@ -1,58 +1,19 @@
-<?xml version="1.0" encoding="Windows-1252"?>
+<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
-    <!-- Leave this alone. Sets up configsectionhandler section -->
     <configSections>
-        <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net" />
+        <section name="nlog" type="NLog.Config.ConfigSectionHandler, NLog" />
     </configSections>
 
     <appSettings>
     </appSettings>
 
-    <!-- This section contains the log4net configuration settings -->
-    <log4net>
-        <appender name="LogFileAppender" type="log4net.Appender.RollingFileAppender" >
-            <param name="File" value="trace.log" />
-            <param name="AppendToFile" value="false" />
-            <param name="MaxSizeRollBackups" value="1" />
-            <param name="MaximumFileSize" value="128KB" />
-            <param name="RollingStyle" value="Size" />
+    <nlog>
+        <appenders>
+            <appender name="console" type="Console" />
+        </appenders>
 
-            <layout type="log4net.Layout.PatternLayout">
-                <param name="ConversionPattern" value="%5r|%t|%-5p|%c: %m%n" />
-            </layout>
-        </appender>
-
-        <appender name="SqlLogFileAppender" type="log4net.Appender.RollingFileAppender" >
-            <param name="File" value="sqltrace.log" />
-            <param name="AppendToFile" value="false" />
-            <param name="MaxSizeRollBackups" value="1" />
-            <param name="MaximumFileSize" value="128KB" />
-            <param name="RollingStyle" value="Size" />
-
-            <layout type="log4net.Layout.PatternLayout">
-                <param name="ConversionPattern" value="%m" />
-            </layout>
-        </appender>
-
-        <appender name="ConsoleAppender" type="log4net.Appender.ConsoleAppender" >
-            <layout type="log4net.Layout.PatternLayout">
-                <param name="ConversionPattern" value="%c: %m%n" />
-            </layout>
-        </appender>
-
-        <!-- Setup the root category, add the appenders and set the default priority -->
-        <root>
-            <priority value="DEBUG" />
-            <appender-ref ref="ConsoleAppender" />
-            <appender-ref ref="LogFileAppender" />
-        </root>
-
-        <logger name="Sooda.SQL"><level value="DEBUG" /></logger>
-        <logger name="Sooda.Object"><level value="DEBUG" /></logger>
-        <logger name="Sooda.Cache"><level value="DEBUG" /></logger>
-        <logger name="Sooda.Transaction"><level value="DEBUG" /></logger>
-        <logger name="Sooda.Config"><level value="INFO" /></logger>
-        <logger name="Sooda.FactoryCache"><level value="DEBUG" /></logger>
-    </log4net>
-
+        <rules>
+            <logger name="*" appendTo="console" />
+        </rules>
+    </nlog>
 </configuration>
