more cleanups, using CDIL in more places, added CDIL context

--- a/src/Tools/SoodaStubGen/SoodaStubGen.csproj
+++ b/src/Tools/SoodaStubGen/SoodaStubGen.csproj
@@ -172,6 +172,11 @@
                     BuildAction = "Compile"
                 />
                 <File
+                    RelPath = "CDIL\CDILContext.cs"
+                    SubType = "Code"
+                    BuildAction = "Compile"
+                />
+                <File
                     RelPath = "CDIL\CDILParser.cs"
                     SubType = "Code"
                     BuildAction = "Compile"
