--- a/src/Tools/SoodaStubGen/SoodaStubGen.csproj
+++ b/src/Tools/SoodaStubGen/SoodaStubGen.csproj
@@ -221,6 +221,10 @@
                     BuildAction = "EmbeddedResource"
                 />
                 <File
+                    RelPath = "CDIL\Templates\Skeleton.partial.cdil"
+                    BuildAction = "EmbeddedResource"
+                />
+                <File
                     RelPath = "CDIL\Templates\Stub.cdil"
                     BuildAction = "EmbeddedResource"
                 />
