more work towards supporting multiple-column primary keys more CDIL refactoring added CDIL pretty printer with roundtripping support (can generate CDIL from CodeDOM and vice versa)

--- a/src/Tools/SoodaStubGen/SoodaStubGen.csproj
+++ b/src/Tools/SoodaStubGen/SoodaStubGen.csproj
@@ -182,6 +182,11 @@
                     BuildAction = "Compile"
                 />
                 <File
+                    RelPath = "CDIL\CDILPrettyPrinter.cs"
+                    SubType = "Code"
+                    BuildAction = "Compile"
+                />
+                <File
                     RelPath = "CDIL\CDILTemplate.cs"
                     SubType = "Code"
                     BuildAction = "Compile"
