preliminary support for multiple-column primary keys, simple cases work, need to give it more testing got rid of the SoodaPair

--- a/tests/TestCases/Sooda.UnitTests.TestCases.csproj
+++ b/tests/TestCases/Sooda.UnitTests.TestCases.csproj
@@ -167,6 +167,11 @@
                     BuildAction = "Compile"
                 />
                 <File
+                    RelPath = "ObjectMapper\MultiPKTest.cs"
+                    SubType = "Code"
+                    BuildAction = "Compile"
+                />
+                <File
                     RelPath = "ObjectMapper\Nto1CollectionTest.cs"
                     SubType = "Code"
                     BuildAction = "Compile"
