--- a/tests/UnitTestObjects/Sooda.UnitTests.Objects.csproj
+++ b/tests/UnitTestObjects/Sooda.UnitTests.Objects.csproj
@@ -173,6 +173,11 @@
                     BuildAction = "Compile"
                 />
                 <File
+                    RelPath = "MultiKey.cs"
+                    SubType = "Code"
+                    BuildAction = "Compile"
+                />
+                <File
                     RelPath = "PKBool.cs"
                     SubType = "Code"
                     BuildAction = "Compile"
