added reasonable default precommit values based on field data type. can be overridden by <class defaultPrecommitValue="" /> or <field precommitValue="" />

--- a/src/Sooda/Sooda.csproj
+++ b/src/Sooda/Sooda.csproj
@@ -808,6 +808,16 @@
                     BuildAction = "Compile"
                 />
                 <File
+                    RelPath = "Schema\PrecommitValueInfo.cs"
+                    SubType = "Code"
+                    BuildAction = "Compile"
+                />
+                <File
+                    RelPath = "Schema\PrecommitValueInfoCollection.cs"
+                    SubType = "Code"
+                    BuildAction = "Compile"
+                />
+                <File
                     RelPath = "Schema\RelationInfo.cs"
                     SubType = "Code"
                     BuildAction = "Compile"
