--- a/tests/BaseObjects/Sooda.UnitTests.BaseObjects.csproj
+++ b/tests/BaseObjects/Sooda.UnitTests.BaseObjects.csproj
@@ -16,7 +16,7 @@
                 DefaultTargetSchema = "IE50"
                 DelaySign = "false"
                 OutputType = "Library"
-                PreBuildEvent = "$(SolutionDir)..\src\SoodaStubGen\bin\$(ConfigurationName)\SoodaStubGen.exe --nullable-as sqltype --project vs -s $(SolutionDir)DBSchemaBase.xml -n Sooda.UnitTests.BaseObjects -o $(SolutionDir)BaseObjects"
+                PreBuildEvent = "$(SolutionDir)..\src\SoodaStubGen\bin\$(ConfigurationName)\SoodaStubGen.exe --rebuild-if-changed --nullable-as sqltype --project vs -s $(SolutionDir)DBSchemaBase.xml -n Sooda.UnitTests.BaseObjects -o $(SolutionDir)BaseObjects"
                 PostBuildEvent = ""
                 RootNamespace = ""
                 RunPostBuildEvent = "OnBuildSuccess"
