--- a/tests/ConsoleTest/ConsoleTest.csproj
+++ b/tests/ConsoleTest/ConsoleTest.csproj
@@ -99,6 +99,11 @@
                     Project = "{2DB9451B-8E35-45C3-94E6-32026E9DE8D1}"
                     Package = "{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}"
                 />
+                <Reference
+                    Name = "Sooda.UnitTests.BaseObjects"
+                    Project = "{A1D122ED-CF84-4EF0-A138-72922DD50409}"
+                    Package = "{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}"
+                />
             </References>
         </Build>
         <Files>
