--- a/tests/TestCases/Sooda.UnitTests.TestCases.csproj
+++ b/tests/TestCases/Sooda.UnitTests.TestCases.csproj
@@ -222,6 +222,16 @@
                     BuildAction = "Compile"
                 />
                 <File
+                    RelPath = "Soql\EvaluateTest.cs"
+                    SubType = "Code"
+                    BuildAction = "Compile"
+                />
+                <File
+                    RelPath = "Soql\GetInvolvedClassTest.cs"
+                    SubType = "Code"
+                    BuildAction = "Compile"
+                />
+                <File
                     RelPath = "Soql\RelationalOperatorsTest.cs"
                     SubType = "Code"
                     BuildAction = "Compile"
