cleaned up the public interface of SoodaObject, fixed a bug where inter-dependent Insert-mode objects would cause deserialization to fail

--- a/src/Sooda/Sooda.csproj
+++ b/src/Sooda/Sooda.csproj
@@ -409,6 +409,11 @@
                     BuildAction = "Compile"
                 />
                 <File
+                    RelPath = "ObjectMapper\SoodaObjectImpl.cs"
+                    SubType = "Code"
+                    BuildAction = "Compile"
+                />
+                <File
                     RelPath = "ObjectMapper\SoodaObjectListSnapshot.cs"
                     SubType = "Code"
                     BuildAction = "Compile"
@@ -734,6 +739,16 @@
                 />
                 <File
                     RelPath = "Schema\Collection1toNInfo.cs"
+                    SubType = "Code"
+                    BuildAction = "Compile"
+                />
+                <File
+                    RelPath = "Schema\CollectionBaseInfo.cs"
+                    SubType = "Code"
+                    BuildAction = "Compile"
+                />
+                <File
+                    RelPath = "Schema\CollectionBaseInfoCollection.cs"
                     SubType = "Code"
                     BuildAction = "Compile"
                 />
