--- a/src/SoodaStubGen/SoodaStubGen.csproj
+++ b/src/SoodaStubGen/SoodaStubGen.csproj
@@ -202,6 +202,10 @@
                     BuildAction = "Compile"
                 />
                 <File
+                    RelPath = "CDIL\Templates\ClassField.cdil"
+                    BuildAction = "EmbeddedResource"
+                />
+                <File
                     RelPath = "CDIL\Templates\DatabaseSchema.cdil"
                     BuildAction = "EmbeddedResource"
                 />
@@ -214,11 +218,19 @@
                     BuildAction = "EmbeddedResource"
                 />
                 <File
+                    RelPath = "CDIL\Templates\NullableTypedWrapper.cdil"
+                    BuildAction = "EmbeddedResource"
+                />
+                <File
                     RelPath = "CDIL\Templates\Skeleton.cdil"
                     BuildAction = "EmbeddedResource"
                 />
                 <File
                     RelPath = "CDIL\Templates\Stub.cdil"
+                    BuildAction = "EmbeddedResource"
+                />
+                <File
+                    RelPath = "CDIL\Templates\TypedWrapper.cdil"
                     BuildAction = "EmbeddedResource"
                 />
                 <File
