--- a/tests/ConsoleTest/App.config
+++ b/tests/ConsoleTest/App.config
@@ -6,6 +6,10 @@
 
     <appSettings>
     </appSettings>
+    
+    <runtime>
+        <gcConcurrent enabled="false" />
+    </runtime>
 
     <nlog>
         <appenders>
